[package]
name = "webrender_surfman"
version = "0.0.3"
authors = ["The Servo Project Developers"]
license = "MPL-2.0"
edition = "2018"
publish = false

[lib]
name = "webrender_surfman"
path = "lib.rs"

[dependencies]
euclid = "0.22"
# NOTE: the sm-angle feature only enables angle on windows, not other platforms!
surfman = { version = "0.8", features = ["chains", "sm-angle", "sm-angle-default"] }
